# PyInferenceManager

./: .github-release-v0.2.0.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FINAL_STATUS_v0.3.0.md  LICENSE  Makefile  PHASE3_COMPLETE.md  PHASE4_WEEK21_SUMMARY.md  PYPI_RELEASE_STATUS.md  README.md  RELEASE_COMPLETE.md  RELEASE_v0.2.0.md  RELEASE_v0.3.0.md  pyproject.toml
crates/pyinferencemanager-core/: Cargo.toml
crates/pyinferencemanager-core/src/: error.rs  error_classifier.rs  lib.rs
crates/pyinferencemanager-core/src/analyzer/: classifier.rs  complexity.rs  embedding_complexity.rs  mod.rs
crates/pyinferencemanager-core/src/cache/: embedding_key.rs  mod.rs  semantic_cache.rs  sqlite_store.rs
crates/pyinferencemanager-core/src/engines/: cloud_client.rs  mod.rs  ollama_client.rs  openai_client.rs  provider_health.rs
crates/pyinferencemanager-core/src/hardware/: memory_map.rs  mod.rs  ollama_probe.rs  profiler.rs
crates/pyinferencemanager-core/src/observability/: logging.rs  metrics.rs  mod.rs  tracer.rs
crates/pyinferencemanager-core/src/observability/exporters/: jaeger_exporter.rs  logging_exporter.rs  mod.rs  prometheus_exporter.rs
crates/pyinferencemanager-core/src/optimizer/: budget_enforcer.rs  cost_estimator.rs  cost_tracker.rs  dynamic_router.rs  mod.rs  retry_strategy.rs
crates/pyinferencemanager-core/src/orchestrator/: api_executor.rs  executor.rs  load_tester.rs  mod.rs  provider_executor.rs  provider_load_test.rs  real_load_tester.rs  scenarios.rs
crates/pyinferencemanager-core/src/planner/: dag_builder.rs  mod.rs  parallel.rs  templates.rs
crates/pyinferencemanager-core/src/router/: execution_router.rs  mod.rs  multi_provider.rs
crates/pyinferencemanager-core/src/types/: cache.rs  config.rs  dag.rs  hardware.rs  mod.rs  plan.rs  task.rs
crates/pyinferencemanager-py/: Cargo.toml
crates/pyinferencemanager-py/src/: lib.rs
docs/: IMPLEMENTATION_SUMMARY.md  phase2_week11_12_integration.md  phase2_week13_14_error_handling.md  phase2_week7_8_multi_provider.md  phase2_week9_10_retry_cost_health.md  phase3_week15_production_integration.md  phase3_week16_load_testing.md  phase3_week19_20_optimization.md  phase4_week21_real_load_testing.md  phase4_week22_api_integration.md
examples/: multi_provider_demo.py  retry_and_cost_demo.py
pyinferencemanager/: __init__.py
