[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyinferencemanager"
dynamic = ["version"]
description = "Intelligent AI workload orchestrator — multi-provider routing, cost optimization, semantic caching, with dynamic routing and budget enforcement"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "ai", "orchestrator", "llm", "ollama", "anthropic", "openai", "local-first",
    "cost-optimization", "caching", "multi-provider", "routing", "inference",
    "workload-orchestration", "hardware-aware", "semantic-caching",
    "distributed-tracing", "observability", "budget-enforcement"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = ["anthropic>=0.100.0"]

[project.urls]
Homepage = "https://github.com/Mullassery/pyinferencemanager"
Documentation = "https://github.com/Mullassery/pyinferencemanager/blob/main/README.md"
Repository = "https://github.com/Mullassery/pyinferencemanager.git"
Issues = "https://github.com/Mullassery/pyinferencemanager/issues"
Changelog = "https://github.com/Mullassery/pyinferencemanager/releases"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "maturin>=1.0", "ruff>=0.5.0"]

[tool.maturin]
python-source = "."
module-name = "pyinferencemanager._core"
manifest-path = "crates/pyinferencemanager-py/Cargo.toml"
