[package]
name = "pyinferencemanager-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
futures = "0.3"

[dependencies.pyo3]
workspace = true
optional = true

[features]
python = ["pyo3"]

[dev-dependencies]
tokio = { version = "1.53", features = ["full", "test-util"] }
tempfile = "3"
