[package]
name = "pyinferencemanager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyinferencemanager-core = { path = "../pyinferencemanager-core", features = ["python"] }
pyo3.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
